--- a/PTI/asset/scss/style.css
+++ b/PTI/asset/scss/style.css
@@ -6,6 +6,7 @@
 
 body {
   overflow: hidden;
+  background-color: black;
 }
 
 html {
@@ -204,6 +205,7 @@ header {
   justify-content: center;
   justify-items: center;
   background-size: cover;
+  transform: translate(200vh, -100vh);
 }
 .container-parrallax1 .list-container1 {
   display: flex;
@@ -215,14 +217,14 @@ header {
   position: absolute;
   z-index: 4;
   list-style: none;
-  background-color: rgb(255, 255, 255);
-  padding: 20px 0px;
-  border-radius: 5px;
   justify-content: center;
   align-items: center;
-  width: 100vh;
 }
 .container-parrallax1 .list-container1 ul li {
+  border-radius: 5px;
+  width: 100vh;
+  background-color: rgb(255, 255, 255);
+  padding: 20px 0px;
   font-family: "Kanit", sans-serif;
   font-size: large;
   font-weight: bolder;
@@ -235,14 +237,14 @@ header {
 }
 
 .back {
-  z-index: 5;
+  z-index: 10;
   position: absolute;
-  transform: rotate(-90deg);
-  width: 10px;
-  height: 10px;
-  top: 208vh;
-  left: 50px;
   opacity: 0.5;
+  filter: invert(100%);
+}
+.back img {
+  height: 50px;
+  width: 50px;
 }
 
 .container-parrallax1::before {
