--- a/PTI/asset/scss/style.css
+++ b/PTI/asset/scss/style.css
@@ -22,6 +22,10 @@ header {
 
 .uika {
   display: flex;
+  border: 1px solid 0;
+  width: 50px;
+  left: 48%;
+  right: 48%;
   position: relative;
   z-index: 3;
   margin-top: 20px;
@@ -70,8 +74,19 @@ header {
   color: #f2f2f2;
   opacity: 0.7;
   font-family: "Istok Web", sans-serif;
+  animation: fadeInAnimation ease 8s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
 }
 
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .video-container::before {
   content: "";
   display: block;
@@ -221,6 +236,82 @@ header {
   align-items: center;
 }
 .container-parrallax1 .list-container1 ul li {
+  margin-right: 60px;
+  border-radius: 15px;
+  width: 40vh;
+  font-family: "Kanit", sans-serif;
+  background-color: rgb(255, 255, 255);
+  font-size: large;
+  font-weight: bolder;
+  padding: 25.2px;
+  color: #202020;
+}
+.container-parrallax1 .list-container1 ul a {
+  text-decoration: none;
+  color: #e4e4e4;
+}
+
+.visi {
+  height: 56.5vh;
+}
+
+.misi {
+  height: 56.5vh;
+}
+
+.tujuan {
+  height: 56.5vh;
+}
+
+.back {
+  z-index: 20;
+  position: absolute;
+  right: 22%;
+  top: 27%;
+  background-color: white;
+  border-radius: 50px;
+  padding: 10px;
+  text-decoration: none;
+  font-family: zeniq;
+  color: #000000;
+}
+
+.container-parrallax1::before {
+  content: "";
+  width: 100%;
+  height: 100vh;
+  display: block;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.5);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+}
+
+.container-parrallax2 {
+  height: 100vh;
+  width: 100%;
+  background-image: url("https://i.ibb.co/Dfg31bq/Universitas-Ibn-Khaldun-UIKA-Bogor.jpg");
+  background-attachment: fixed;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  background-size: cover;
+  transform: translate(0vh, -100vh);
+}
+.container-parrallax2 .list-container2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container-parrallax2 .list-container2 ul {
+  display: flex;
+  position: absolute;
+  z-index: 4;
+  list-style: none;
+  justify-content: center;
+  align-items: center;
+}
+.container-parrallax2 .list-container2 ul li {
   border-radius: 5px;
   width: 100vh;
   background-color: rgb(255, 255, 255);
@@ -231,23 +322,25 @@ header {
   padding: 30px;
   color: #202020;
 }
-.container-parrallax1 .list-container1 ul a {
+.container-parrallax2 .list-container2 ul a {
   text-decoration: none;
-  color: #e4e4e4;
+  color: #1c3b29;
 }
 
-.back {
-  z-index: 10;
+.back2 {
+  z-index: 20;
   position: absolute;
-  opacity: 0.5;
-  filter: invert(100%);
-}
-.back img {
-  height: 50px;
-  width: 50px;
+  right: 22%;
+  top: 28%;
+  background-color: white;
+  border-radius: 50px;
+  padding: 10px;
+  text-decoration: none;
+  font-family: zeniq;
+  color: #000000;
 }
 
-.container-parrallax1::before {
+.container-parrallax2::before {
   content: "";
   width: 100%;
   height: 100vh;
