--- a/PTI/asset/scss/style.css
+++ b/PTI/asset/scss/style.css
@@ -246,10 +246,6 @@ header {
   padding: 25.2px;
   color: #202020;
 }
-.container-parrallax1 .list-container1 ul a {
-  text-decoration: none;
-  color: #e4e4e4;
-}
 
 .visi {
   height: 56.5vh;
@@ -266,8 +262,8 @@ header {
 .back {
   z-index: 20;
   position: absolute;
-  right: 22%;
-  top: 27%;
+  right: 15%;
+  top: 18%;
   background-color: white;
   border-radius: 50px;
   padding: 10px;
@@ -290,7 +286,7 @@ header {
 .container-parrallax2 {
   height: 100vh;
   width: 100%;
-  background-image: url("https://i.ibb.co/Dfg31bq/Universitas-Ibn-Khaldun-UIKA-Bogor.jpg");
+  background-image: url("https://i.ibb.co/jyNCLqb/3783335385.png");
   background-attachment: fixed;
   display: flex;
   justify-content: center;
@@ -303,6 +299,18 @@ header {
   justify-content: center;
   align-items: center;
 }
+.container-parrallax2 .list-container2 h1 {
+  display: flex;
+  position: absolute;
+  z-index: 5;
+  justify-content: center;
+  align-items: center;
+  top: 18%;
+  background-color: #1c3b29;
+  color: #f2f2f2;
+  border-radius: 10px;
+  padding: 10px;
+}
 .container-parrallax2 .list-container2 ul {
   display: flex;
   position: absolute;
@@ -313,25 +321,39 @@ header {
 }
 .container-parrallax2 .list-container2 ul li {
   border-radius: 5px;
-  width: 100vh;
+  width: 35vh;
+  margin-right: 20px;
   background-color: rgb(255, 255, 255);
   padding: 20px 0px;
   font-family: "Kanit", sans-serif;
   font-size: large;
   font-weight: bolder;
-  padding: 30px;
+  padding: 20px;
   color: #202020;
+  overflow: auto;
 }
-.container-parrallax2 .list-container2 ul a {
-  text-decoration: none;
-  color: #1c3b29;
+
+.diploma {
+  height: 50vh;
+}
+
+.sarjana {
+  height: 50vh;
+}
+
+.pascasarjana {
+  height: 50vh;
+}
+
+.doktor {
+  height: 50vh;
 }
 
 .back2 {
   z-index: 20;
   position: absolute;
-  right: 22%;
-  top: 28%;
+  right: 11%;
+  top: 20%;
   background-color: white;
   border-radius: 50px;
   padding: 10px;
@@ -341,6 +363,47 @@ header {
 }
 
 .container-parrallax2::before {
+  content: "";
+  width: 100%;
+  height: 100vh;
+  display: block;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.5);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+}
+
+.container-parrallax3 {
+  height: 100vh;
+  width: 100%;
+  background-image: url("https://i.ibb.co/k4GqxpJ/update-prof-may-2.png");
+  background-attachment: fixed;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  background-size: cover;
+  transform: translate(0vh, -100vh);
+}
+.container-parrallax3 .list-container3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container-parrallax3 .list-container3 ul {
+  display: flex;
+  position: absolute;
+  z-index: 4;
+  list-style: none;
+}
+.container-parrallax3 .list-container3 ul li {
+  font-family: "Kanit", sans-serif;
+  font-size: large;
+  font-weight: bolder;
+  padding: 5rem;
+  color: #f2f2f2;
+}
+
+.container-parrallax3::before {
   content: "";
   width: 100%;
   height: 100vh;
@@ -371,4 +434,62 @@ header {
   width: 2px;
   right: 35%;
   transform: translateY(-30%);
+}
+
+@media screen and (max-width: 1500px) and (min-width: 800px) {
+  .container-parrallax1 .list-container1 {
+    display: flex;
+  }
+  .container-parrallax1 .list-container1 ul {
+    flex-direction: column;
+  }
+  .container-parrallax1 .list-container1 ul li {
+    margin-right: 0;
+    margin-bottom: 10px;
+    border-radius: 15px;
+    width: 60vh;
+    padding: 15px;
+    font-size: medium;
+    font-weight: bolder;
+  }
+  .visi {
+    height: 25.5vh;
+  }
+  .misi {
+    height: 25.5vh;
+  }
+  .tujuan {
+    height: 25.5vh;
+  }
+  .back {
+    right: 21%;
+    top: 11%;
+  }
+  .container-parrallax2 .list-container2 {
+    display: flex;
+  }
+  .container-parrallax2 .list-container2 ul {
+    flex-direction: column;
+  }
+  .container-parrallax2 .list-container2 ul li {
+    margin-right: 0;
+    margin-bottom: 10px;
+    border-radius: 15px;
+    width: 60vh;
+    padding: 15px;
+    font-size: medium;
+    font-weight: bolder;
+  }
+  .diploma {
+    height: 12vh;
+  }
+  .sarjana {
+    height: 12vh;
+  }
+  .pascasarjana {
+    height: 12vh;
+  }
+  .doktor {
+    height: 12vh;
+  }
 }/*# sourceMappingURL=style.css.map */
