--- a/PTI/asset/scss/style.css
+++ b/PTI/asset/scss/style.css
@@ -5,8 +5,8 @@
 }
 
 body {
-  overflow: hidden;
   background-color: black;
+  overflow: hidden;
 }
 
 html {
@@ -176,6 +176,7 @@ header {
   justify-content: center;
   justify-items: center;
   background-size: cover;
+  background-position: center;
 }
 .container-parrallax .list-container {
   display: flex;
@@ -216,6 +217,7 @@ header {
   width: 100%;
   background-image: url("https://i.ibb.co/Dfg31bq/Universitas-Ibn-Khaldun-UIKA-Bogor.jpg");
   background-attachment: fixed;
+  background-position: center;
   display: flex;
   justify-content: center;
   justify-items: center;
@@ -245,6 +247,7 @@ header {
   font-weight: bolder;
   padding: 25.2px;
   color: #202020;
+  overflow: auto;
 }
 
 .visi {
@@ -288,6 +291,7 @@ header {
   width: 100%;
   background-image: url("https://i.ibb.co/jyNCLqb/3783335385.png");
   background-attachment: fixed;
+  background-position: center;
   display: flex;
   justify-content: center;
   justify-items: center;
@@ -378,6 +382,7 @@ header {
   width: 100%;
   background-image: url("https://i.ibb.co/k4GqxpJ/update-prof-may-2.png");
   background-attachment: fixed;
+  background-position: center;
   display: flex;
   justify-content: center;
   justify-items: center;
@@ -403,13 +408,28 @@ header {
   color: #f2f2f2;
 }
 
+.back3 {
+  z-index: 20;
+  position: absolute;
+  right: 11%;
+  top: 20%;
+  background-color: white;
+  border-radius: 50px;
+  padding: 10px;
+  text-decoration: none;
+  font-family: zeniq;
+  color: #000000;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 .container-parrallax3::before {
   content: "";
   width: 100%;
-  height: 100vh;
+  bottom: 0;
+  height: 8.5vh;
   display: block;
   position: absolute;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgb(0, 0, 0);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
 }
@@ -447,7 +467,7 @@ header {
     margin-right: 0;
     margin-bottom: 10px;
     border-radius: 15px;
-    width: 60vh;
+    width: 100vh;
     padding: 15px;
     font-size: medium;
     font-weight: bolder;
@@ -462,8 +482,8 @@ header {
     height: 25.5vh;
   }
   .back {
-    right: 21%;
-    top: 11%;
+    right: 12%;
+    top: 10%;
   }
   .container-parrallax2 .list-container2 {
     display: flex;
@@ -475,7 +495,7 @@ header {
     margin-right: 0;
     margin-bottom: 10px;
     border-radius: 15px;
-    width: 60vh;
+    width: 100vh;
     padding: 15px;
     font-size: medium;
     font-weight: bolder;
@@ -491,5 +511,35 @@ header {
   }
   .doktor {
     height: 12vh;
+  }
+}
+@media screen and (max-height: 800px) {
+  .button {
+    margin-bottom: 5px;
+    height: 0;
+  }
+  .field {
+    display: none;
+  }
+  .container-parrallax1 .list-container1 ul {
+    margin-top: 50px;
+    height: 70vh;
+  }
+  .container-parrallax1 .list-container1 ul li {
+    width: 100vh;
+  }
+  .back {
+    right: 21%;
+    top: 20%;
+  }
+  .container-parrallax2 .list-container2 h1 {
+    font-weight: bold;
+    font-size: 16px;
+  }
+  .container-parrallax2 .list-container2 ul {
+    margin-top: 50px;
+  }
+  .container-parrallax2 .list-container2 ul li {
+    width: 100vh;
   }
 }/*# sourceMappingURL=style.css.map */
